API amended
