# API/nodejs-server-server/controllers/User.js
@@ -14,12 +14,8 @@ module.exports.logoutGET = function logoutGET (req, res, next) {
   User.logoutGET(req.swagger.params, res, next);
 };
 
-module.exports.profileGET = function profileGET (req, res, next) {
-  User.profileGET(req.swagger.params, res, next);
-};
-
-module.exports.profileUpdatePUT = function profileUpdatePUT (req, res, next) {
-  User.profileUpdatePUT(req.swagger.params, res, next);
+module.exports.profilePUT = function profilePUT (req, res, next) {
+  User.profilePUT(req.swagger.params, res, next);
 };
 
 module.exports.signinPOST = function signinPOST (req, res, next) {
