# API/nodejs-server-server/controllers/UserService.js
@@ -26,32 +26,7 @@ exports.logoutGET = function(args, res, next) {
   res.end();
 }
 
-exports.profileGET = function(args, res, next) {
-  /**
-   * parameters expected in the args:
-  **/
-    var examples = {};
-  examples['application/json'] = {
-  "passportData" : 1.3579000000000001069366817318950779736042022705078125,
-  "gender" : "aeiou",
-  "city" : "aeiou",
-  "name" : "aeiou",
-  "id" : 1.3579000000000001069366817318950779736042022705078125,
-  "snils" : 1.3579000000000001069366817318950779736042022705078125,
-  "email" : "aeiou",
-  "age" : 1.3579000000000001069366817318950779736042022705078125
-};
-  if(Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  }
-  else {
-    res.end();
-  }
-  
-}
-
-exports.profileUpdatePUT = function(args, res, next) {
+exports.profilePUT = function(args, res, next) {
   /**
    * parameters expected in the args:
   * body (User)
